[package]
name = "anglosaxon"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0+"
repository = "https://github.com/amandasaurus/anglosaxon-rs"
authors = ["Amanda McCann <amanda@technomancy.org>"]
description = "Convert XML files to text with ad-hoc streaming SAX parser"

[dependencies]
xml-rs ="0.8"
anyhow = "1.0"
clap = "3"
