[package]
name = "anglosaxon"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0+"
repository = "https://github.com/amandasaurus/anglosaxon-rs"
authors = ["Amanda McCann <amanda@technomancy.org>"]
description = "Convert XML files on stdin to text on stdout with ad-hoc streaming SAX parser"

[dependencies]
xml-rs ="0.8"
anyhow = "1.0"
clap = { version = "3", features = ["cargo"] }
